--- a/index.html
+++ b/index.html
@@ -1,126 +1,1 @@
-<!DOCTYPE html>
-<html>
-	<head>
-		<title> Indah Cahyani </title>
-		<link href="https://fonts.googleapis.com/css2?family=Arbutus+Slab&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Parisienne&display=swap" rel="stylesheet">
-		<link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400&display=swap" rel="stylesheet">
-		<style type="text/css">
-		
-			body {
-				color: #555555;
-				background-color: #fafafa;
-				font-family: 'Open Sans', sans-serif;
-				text-align: center;
-            }
-			/* img {
-				border-radius: 50%;
-			} */
-            ul {
-				width: 800px;
-				padding: 15px;
-				margin: 0px auto 0px auto;
-				border-top: 2px solid #000;
-				border-bottom: 1px solid #000;
-				text-align: center;
-			}
-			li {
-				display: inline;
-				margin: 0px 3px;
-            }
-			h3 {
-                text-align: center;
-				padding: 10px;
-				font-family: 'Dancing Script', cursive;
-            }
-            h2 {
-                text-align: center;
-                margin-top: 80px;
-				margin-bottom: 20px;
-				padding: 10px;
-				font-family: 'Arbutus Slab', serif;
-            }
-            p {
-				text-align: center;
-				width: 600px;
-				margin: 20px auto 20px auto;
-				font-weight: normal;
-				font-family: 'Arbutus Slab', serif;
-				/* font-size: 0.5em; */
-				/* font-family: 'Open Sans', sans-serif; */
-			}
-			a {
-				color: #000000;
-				text-decoration: none;
-				padding: 6px 18px 5px 18px;
-			}
-			a:hover, a.on {
-				color: #cc3333;
-				background-color: #ffffff;
-			}
-			.wrapper {
-				width: 720px;
-				margin: 0px auto;
-			}
-			.header {
-				margin: 40px 0px 20px 0px;
-			}
-			.entry {
-				width: 220px;
-				float: left;
-				margin: 10px;
-				height: 198px;
-				background-image: url("images/shadow.png");
-				background-repeat: no-repeat;
-				background-position: bottom;
-			}
-			figure {
-				display: block;
-				width: 202px;
-				height: 170px;
-				background-color: #e7e3d8;
-				padding: 9px;
-				text-align: left;
-			}
-			figure img {
-				width: 200px;
-				height: 150px;
-				border: 1px solid #d6d6d6;
-			}
-			figcaption {
-				background-image: url("images/icon.png");
-				padding-left: 20px;
-				background-repeat: no-repeat;
-			}
-		</style>
-	</head>
-	<body>
-        <div id="page">
-			<h2>
-				indahc.
-			</h2>
-			<!-- <ul id="navigation">
-				<li> <a href="#" class="on"> me! </a> </li>
-				<li> <a href="#"> programmer </a> </li>
-				<li> <a href="#"> engineer </a> </li>
-				<li> <a href="#"> designer </a> </li>
-
-			</ul> -->
-			<div class="img-bg">
-				<img src="src/img/minimalism.svg" height="420vh" width="420vh"  alt="minimalism" />
-			</div>
-			<h3>
-				"wild spirit, soft heart, sweet soul".
-			</h3>
-		</div>
-        <!-- <div class="wrapper">
-			<div class="header">
-				<p> Have been studying computer networks since 2013 and continue my studies in the Department Information of Technology. </p>
-			</div>
-			<!-- <div class="img-profile">
-				<img src="src/img/indahc.jpg" width="300vh" height="300vh"/>
-			</div> -->
-		</div>
-	</body>
-</html>
+<!doctype html><html lang="en"><head><meta charset="utf-8"/><link rel="icon" href="/favicon.ico"/><meta name="viewport" content="width=device-width,initial-scale=1"/><meta name="theme-color" content="#000000"/><meta name="description" content="Web site created using icreate-react-app"/><link rel="apple-touch-icon" href="/logo192.png"/><link rel="manifest" href="/manifest.json"/><title>Indah Cahyani</title><link href="/static/css/main.d340197c.chunk.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div><script>!function(e){function r(r){for(var n,p,l=r[0],a=r[1],f=r[2],c=0,s=[];c<l.length;c++)p=l[c],Object.prototype.hasOwnProperty.call(o,p)&&o[p]&&s.push(o[p][0]),o[p]=0;for(n in a)Object.prototype.hasOwnProperty.call(a,n)&&(e[n]=a[n]);for(i&&i(r);s.length;)s.shift()();return u.push.apply(u,f||[]),t()}function t(){for(var e,r=0;r<u.length;r++){for(var t=u[r],n=!0,l=1;l<t.length;l++){var a=t[l];0!==o[a]&&(n=!1)}n&&(u.splice(r--,1),e=p(p.s=t[0]))}return e}var n={},o={1:0},u=[];function p(r){if(n[r])return n[r].exports;var t=n[r]={i:r,l:!1,exports:{}};return e[r].call(t.exports,t,t.exports,p),t.l=!0,t.exports}p.m=e,p.c=n,p.d=function(e,r,t){p.o(e,r)||Object.defineProperty(e,r,{enumerable:!0,get:t})},p.r=function(e){"undefined"!=typeof Symbol&&Symbol.toStringTag&&Object.defineProperty(e,Symbol.toStringTag,{value:"Module"}),Object.defineProperty(e,"__esModule",{value:!0})},p.t=function(e,r){if(1&r&&(e=p(e)),8&r)return e;if(4&r&&"object"==typeof e&&e&&e.__esModule)return e;var t=Object.create(null);if(p.r(t),Object.defineProperty(t,"default",{enumerable:!0,value:e}),2&r&&"string"!=typeof e)for(var n in e)p.d(t,n,function(r){return e[r]}.bind(null,n));return t},p.n=function(e){var r=e&&e.__esModule?function(){return e.default}:function(){return e};return p.d(r,"a",r),r},p.o=function(e,r){return Object.prototype.hasOwnProperty.call(e,r)},p.p="/";var l=this["webpackJsonpmy-app"]=this["webpackJsonpmy-app"]||[],a=l.push.bind(l);l.push=r,l=l.slice();for(var f=0;f<l.length;f++)r(l[f]);var i=a;t()}([])</script><script src="/static/js/2.763b34e5.chunk.js"></script><script src="/static/js/main.4e0a3847.chunk.js"></script></body></html>
